Add a Maven plugin that assembles and generates the config doc